--- a/src/index.css
+++ b/src/index.css
@@ -798,8 +798,8 @@ button:disabled {
 }
 
 .add-listing-form-container {
-  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
-  background-color: #f7f6f6;
+  box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.2);
+  background-color: white;
   width: 90%;
   margin-top: auto;
   margin-bottom: auto;
@@ -864,8 +864,12 @@ button:disabled {
   width: 100%;
   margin: 5px;
   border: none;
-  font-size: 14px;
+  font-size: 12px !important;
   background-color: white;
+}
+
+.add-listing-form-input-container span {
+  font-size: 12px;
 }
 
 .add-listing-form-input-container select {
