--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,7 @@ li {
   text-decoration: none;
 }
 
+
 .fa-pencil {
   font-size: 12px;
 }
@@ -1055,8 +1056,13 @@ button:disabled {
   display: block;
 }
 
+.mobile .user-container, .mobile .nav-links {
+  margin-left: auto;
+  padding-right: 0;
+}
 
 .mobile-menu {
+  padding: 40px;
   height: 100vh;
   width: 100%;
   position: fixed;
@@ -1064,14 +1070,21 @@ button:disabled {
   margin-right: auto;
   background-color: #e86c6d;
   color: white !important;
+  z-index: 100;
+}
+
+.mobile-menu nav {
+  padding-top: 30px;
 }
 
 .mobile-menu li {
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .mobile-menu a {
   color: white !important;
+  font-size: 20px;
 }
 
 /* Footer */
