Changed settings file, and bug fixes

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,12 @@ button:hover {
   grid-gap: 20px;
 }
 
+/* alert box */
+
+.s-alert-box {
+  z-index: 10000 !important;
+}
+
 input, select {
   padding: 10px;
   width: 100%;
