--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -3,6 +3,14 @@
     flex-direction: column;
 }
 
+@media all and (max-width: 800px) {
+    .contactus-upper {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+
 .contactus-title {
     margin: 1rem 0;
 }
@@ -27,22 +35,30 @@
     align-items: center;
 }
 
-.contactus-left {
+@media all and (max-width: 800px) {
+    .contactus-lower {
+        flex-direction: column;
+    }
+}
+
+.contactus-lower__item {
     width: 50%;
     padding: 1rem;
     text-align: center;
 }
 
-.contactus-left__button button{
+@media all and (max-width: 800px) {
+    .contactus-lower__item {
+        width: 100%;
+    }
+}
+
+.contactus-lower__button button{
     padding: 1rem 5rem;
 }
 
-.contactus-right {
-    width: 50%;
-    padding: 1rem;
-    text-align: center;
-}
-
-.contactus-right__button button {
-    padding: 1rem 5rem;
+@media all and (max-width: 800px) {
+    .contactus-lower__button button {
+        padding: 1rem;
+    }
 }
