--- a/src/index.css
+++ b/src/index.css
@@ -980,6 +980,14 @@ button:disabled {
   color: #b9b9b9;
 }
 
+@media all and (max-width: 500px) {
+  .nav {
+    position: fixed;
+    padding: 0.1rem 1.5rem 0.1rem 1rem;
+    width: 100%;
+  }
+}
+
 .nav ul {
   margin: 0;
 }
@@ -1737,6 +1745,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 100%;
   }
 
+  .landing {
+    margin-top: 5rem;
+  }
+
   /* home */
   .home .hero {
     margin-bottom: 40px;
@@ -1979,7 +1991,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   }
 
   /* footer */
-  .footer {
-    display: none;
+  .footer .container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .footer nav {
+    grid-template-columns: 1fr; 
   }
 }
